--- a/eq1.html
+++ b/eq1.html
@@ -5,6 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chemistry MCQs</title>
     <style>
+        /* Notification styling */
+        .notification {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #ffcc00;
+            color: black;
+            font-size: 24px;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            animation: fadeInOut 5s ease-in-out;
+            display: none;
+        }
+
+        @keyframes fadeInOut {
+            0% { opacity: 0; }
+            10% { opacity: 1; }
+            90% { opacity: 1; }
+            100% { opacity: 0; }
+        }
+
+        /* Button to trigger notification */
+        #notify-btn {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+
+        #notify-btn:hover {
+            background-color: #0056b3;
+        }
         .correct { color: green; }
         .incorrect { color: red; }
         h2 { color: blue; }
@@ -12,6 +53,30 @@
 </head>
 <body>
     <h1>Chemistry Class 11 MCQs</h1>
+     <!-- Add a button to trigger the notification -->
+    <button id="notify-btn">Show Notification</button>
+
+    <!-- Notification Div -->
+    <div class="notification" id="notification">
+        Bappe Diya MERR Jatt DONT keerr baby Jutt Dont CAre, Bhaii kuch bta diye Exam me! God tuje Maths vale sir ki umr denge!
+    </div>
+
+    <!-- MCQs content from your previous HTML goes here -->
+
+    <!-- JavaScript to show notification -->
+    <script>
+        // Function to show the notification
+        function showNotification() {
+            var notification = document.getElementById("notification");
+            notification.style.display = "block";
+            setTimeout(function() {
+                notification.style.display = "none";
+            }, 5000); // Notification will disappear after 5 seconds
+        }
+
+        // Add an event listener to the button
+        document.getElementById("notify-btn").addEventListener("click", showNotification);
+    </script>
 
     <!-- Multiple Choice Questions -->
     <h2>Multiple Choice Questions</h2>
