--- a/eq1.html
+++ b/eq1.html
@@ -54,9 +54,7 @@
 <body>
     <h1>Chemistry Class 11 MCQs</h1>
      <!-- Add a button to trigger the notification -->
-    <button id="notify-btn">Show Notification</button>
-
-    <!-- Notification Div -->
+        <!-- Notification Div -->
     <div class="notification" id="notification">
         Bappe Diya MERR Jatt DONT keerr baby Jutt Dont CAre, Bhaii kuch bta diye Exam me! God tuje Maths vale sir ki umr denge!
     </div>
@@ -74,9 +72,11 @@
             }, 5000); // Notification will disappear after 5 seconds
         }
 
-        // Add an event listener to the button
-        document.getElementById("notify-btn").addEventListener("click", showNotification);
+        // Show notification automatically when the page loads
+        window.onload = showNotification;
     </script>
+
+   
 
     <!-- Multiple Choice Questions -->
     <h2>Multiple Choice Questions</h2>
