--- a/eq1.html
+++ b/eq1.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chemistry MCQs</title>
     <style>
-        /* Notification styling */
+        /* Full-screen Notification styling */
         .notification {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            background-color: #ffcc00;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 204, 0, 0.9); /* Semi-transparent yellow */
             color: black;
-            font-size: 24px;
+            font-size: 30px;
             text-align: center;
-            border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
             z-index: 1000;
             animation: fadeInOut 5s ease-in-out;
             display: none;
@@ -30,7 +31,7 @@
             100% { opacity: 0; }
         }
 
-        /* Button to trigger notification */
+        /* Button to trigger notification (optional) */
         #notify-btn {
             display: block;
             margin: 20px auto;
@@ -54,7 +55,8 @@
 <body>
     <h1>Chemistry Class 11 MCQs</h1>
      <!-- Add a button to trigger the notification -->
-        <!-- Notification Div -->
+     
+    <!-- Notification Div -->
     <div class="notification" id="notification">
         Bappe Diya MERR Jatt DONT keerr baby Jutt Dont CAre, Bhaii kuch bta diye Exam me! God tuje Maths vale sir ki umr denge!
     </div>
@@ -66,7 +68,7 @@
         // Function to show the notification
         function showNotification() {
             var notification = document.getElementById("notification");
-            notification.style.display = "block";
+            notification.style.display = "flex"; // Change to flex for centering
             setTimeout(function() {
                 notification.style.display = "none";
             }, 5000); // Notification will disappear after 5 seconds
@@ -76,7 +78,6 @@
         window.onload = showNotification;
     </script>
 
-   
 
     <!-- Multiple Choice Questions -->
     <h2>Multiple Choice Questions</h2>
